# spectro-cli

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/spectro/: __init__.py  api_server.py  calibrate.py  cli.py  config.py  products.py  realm_parser.py
src/spectro/ble/: __init__.py  device.py  protocol.py  scanner.py
src/spectro/color/: __init__.py
src/spectro/models/: __init__.py
tests/: test_api.py  test_calibrate.py  test_color.py  test_config.py  test_device.py  test_models.py  test_products.py  test_protocol.py  test_scanner.py
