[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectro"
version = "0.2.0"
description = "Independent open-source CLI for Variable Spectro colour measurement devices (not affiliated with Variable, Inc.)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Spectro contributors" }]
keywords = ["spectrophotometer", "colour", "ble", "color-science", "colorimeter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.22,<1",
    "typer>=0.9,<1",
    "rich>=13,<14",
    "numpy>=1.24",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1",
    "pytest-cov>=6",
    "ruff>=0.8",
]
gui = [
    "textual>=0.80,<2",
]

[project.urls]
Homepage = "https://github.com/anomalyco/spectro"
Repository = "https://github.com/anomalyco/spectro"
Issues = "https://github.com/anomalyco/spectro/issues"

[project.scripts]
spectro = "spectro.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/spectro"]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = [
    "E", "W", "F", "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
]
per-file-ignores = { "src/spectro/color/__init__.py" = ["N806", "N803"] }

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["spectro"]
omit = ["tests/*"]
